# game

./: .gitignore  ApplicationEngine.cpp  ApplicationEngine.h  ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-ubuntu.yml  build-windows.yml
engine/: CMakeLists.txt  RendererWindow.cpp  TextureStorage.cpp
engine/include/: RendererWindow.h  TextureStorage.h
engine/include/object/: Item.h  Object.h  Player.h
engine/include/sprite/: BuildingSprite.h  CreatureSprite.h  ItemSprite.h  Sprite.h
engine/src/: RendererWindow.cpp  TextureStorage.cpp
engine/src/object/: Item.cpp  Player.cpp
engine/src/sprite/: BuildingSprite.cpp  CreatureSprite.cpp  ItemSprite.cpp  Sprite.cpp
game_src/: GameApplication.cpp  GameApplication.h  dummy_main.cpp  main.cpp
log/: CMakeLists.txt  Log.cpp  Log.h
res/ase/: player.ase  sword.ase
test/: game_test.cc
